--- a/intensify.html
+++ b/intensify.html
@@ -20,7 +20,7 @@
     <div class="page">
         <div class="header bg-body z-1 w-100 p-4 d-flex align-items-center justify-content-between sticky-top">
             <span class="ps-lg-4 pe-lg-4">
-                <i class="bars fs-1 fa-solid fa-bars opacity-25"></i>
+                <i class="bars fs-1 fa-solid fa-bars"></i>
             </span>
             <h2 class="fs-2 m-color text-center">intensify!</h2>
             <button class="pt-2 pb-2 ps-4 pe-4 fs-5 d-none d-sm-block">loge in</button>
@@ -29,13 +29,13 @@
             <div class="container">
                 <div class="up text-center">
                     <h1 class="s-color fw-bold m-0 p-0 fs-lg-1">Ipsum sed lorem</h1>
-                    <p class="opacity-50 mt-4 mb-4 lh-lg">Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod <br>
+                    <p class="opacity-50 mt-4 mb-5 lh-lg">Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod <br>
                         sed arcu cras consecuat lorem ipsum dolor sit amet.</p>
-                    <button class="fs-5 fw-bold d-block componntBtn">Get Started</button>
+                    <a href="#wrapper" class="fs-5 pt-3 pb-3 fw-bold componntBtn">Get Started</a>
                 </div>
             </div>
         </div>
-        <div class="wrapper pt-5 pb-5">
+        <div id="wrapper" class="wrapper pt-5 pb-5">
             <div class="container">
                 <div class="row align-items-center justify-content-between pt-5 pb-5">
                     <div class="box col-md-6 col-lg-4  text-center text-lg-start text-md-start">
@@ -125,7 +125,9 @@
                 </div>
             </div>
         </div>
-        <div class="text-center  s-bg-color pt-4 pb-4 text-light">powered by: <span class="fw-bold">moustafa fikry.</span></div>
+        <div class="w-100 s-bg-color">
+            <div class="last text-center  pt-4 pb-4 text-light">powered by: <span class="fw-bold">moustafa fikry.</span></div>
+        </div>
         <!-- <div class="left h-100 position-absolute">
             <i class="close fa-solid fa-xmark fa-sm fs-5 p-4"></i>
             <ul class="p-3">
@@ -141,8 +143,45 @@
             </ul>
             <button class="fs-5 fw-bold d-block d-sm-none">login</button>
         </div> -->
+        <div class="sidebar position-fixed s-bg-color">
+            <ul class="p-4">
+                <i class="close fa-solid fa-xmark fa-sm fs-4 text-light float-end pt-2 text-end"></i>
+                <li class="mt-4">
+                    <a href="./intensify.html" class="fw-bold text-light opacity-100">Home</a>
+                </li>
+                <li>
+                    <a href="./Genric.html" class="fw-bold text-light ">Genric</a>
+                </li>
+                <li>
+                    <a href="./element.html" class="fw-bold text-light ">Elements</a>
+                </li>
+            </ul>
+            <div class="componntBtn m-3 d-block d-sm-none">containue</div>
+        </div>
     </div>
-    <script src="./js files/bootstrap.bundle.min.js"></script>
-    <script src="./js files/main.js"></script>
-</body>
-</html>
+    
+    <div class="contact position-absolute s-bg-color p-3 text-center rounded-3">
+        <i class="close fa-solid fa-xmark fa-sm fs-4 text-light float-end pt-2"></i>
+        <h3 class="text-center text-light fw-bold pt-3 pb-3">Log In</h3>
+        <form action="" class="justify-content-center align-items-center">
+            <div class="inputs">
+                <input class="user rounded-1 p-2 mt-3 mb-4 border-0 " type="userName" placeholder="username">
+                <input class="password rounded-1 border-0 p-2 mt-3 mb-3" type="password" placeholder="password">
+            </div>
+            <input class="email w-100 border-0 rounded-1 p-2 mt-3 mb-3" type="email" placeholder="email">
+            <div class="inputs">
+                <input class="submit w-75 p-1 mt-4 mb-4 p-2 pt-3 pb-3 rounded-1 m-bg-color border-0 rounded-2 text-light fs-6 fw-bold" type="submit">
+                <button class="reset m-bg-color w-75 p-1 mb-5 p-2 pt-3 pb-3 rounded-1 m-bg-color border-0 rounded-2 text-light fs-6 fw-bold">reset</button>
+            </div>
+        </form>
+        <a class="float-end fw-bold" href="#">I Havn't Account</a>
+        <div class="alarm w-100 position-absolute m-bg-color text-light p-3 fw-bold rounded-2">Sorry, Not Avalible Now.</div>
+        </div>
+        <div class="to-up position-fixed m-4 p-2 m-bg-color text-light fs-5 rounded-2  fw-bold">
+            <i class="fa-solid fa-arrow-up fa-xs fs-5 me-2"></i>
+            up
+        </div>
+        <script src="./js files/bootstrap.bundle.min.js"></script>
+        <script src="./js files/main.js"></script>
+    </body>
+    </html>
