--- a/intensify.html
+++ b/intensify.html
@@ -159,11 +159,11 @@
             <div class="componntBtn m-3 d-block d-sm-none">containue</div>
         </div>
     </div>
-    
+
     <div class="contact position-absolute s-bg-color p-3 text-center rounded-3">
         <i class="close fa-solid fa-xmark fa-sm fs-4 text-light float-end pt-2"></i>
         <h3 class="text-center text-light fw-bold pt-3 pb-3">Log In</h3>
-        <form action="" class="justify-content-center align-items-center">
+        <form id="form" action="" class="justify-content-center align-items-center">
             <div class="inputs">
                 <input class="user rounded-1 p-2 mt-3 mb-4 border-0 " type="userName" placeholder="username">
                 <input class="password rounded-1 border-0 p-2 mt-3 mb-3" type="password" placeholder="password">
@@ -182,6 +182,6 @@
             up
         </div>
         <script src="./js files/bootstrap.bundle.min.js"></script>
-        <script src="./js files/main.js"></script>
+        <script src="./js files/intensify.js"></script>
     </body>
     </html>
